--- a/scss/_06-utilities.scss
+++ b/scss/_06-utilities.scss
@@ -90,3 +90,9 @@ $alignments: (
     margin-top: $i + rem;
   }
   }
+  @for $i from 1 through 10 {
+    .gap--#{$i}{
+      gap: $i + rem;
+    }
+  }
+  
