--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,6 +1,7 @@
 .bannerFull{
-    background-color: $clr-light;
+    background-color: $clr-base;
     height: 100px;
+    z-index: -1;
 }
 .header {
    width: 100%;
@@ -21,7 +22,7 @@
         }
     }
     nav ul li a{
-        color: $clr-dark;
+        color: $clr-light;
         font-weight: bold;
         font-size: 1.1rem;
         cursor: pointer;
@@ -58,10 +59,10 @@
     }
     .toggle__menu{
         cursor: pointer;
-        z-index: 1;
+        z-index: 99;
         display: none;
         span{
-            background-color: $clr-base;
+            background-color: $clr-light;
             height: 0.2rem;
             width: 2rem;
             display: block;
